# jetpass-intelligence

./: .env.example  .gitignore  pyproject.toml  skills-lock.json
app/: main.py
app/core/: config.py  database.py  dependencies.py  redis.py
app/docs/: class-diagram.puml
app/intelligence/: aerodrome_intel_service.py  contracts.py  graph.py  notam_intel_service.py  orchestrator.py
app/models/: __init__.py  aerodrome.py  base.py  meta.py  notam.py  notam_location.py  pre_llm_artifacts.py  runway.py
app/repositories/: __init__.py  aerodrome_repo.py  notam_location_repo.py  notam_repo.py  pre_llm_artifacts_repo.py
app/routers/: aerodrome_router.py  health_router.py  intelligence_router.py
app/schemas/: __init__.py  aerodrome.py  health_schema.py
app/services/: __init__.py  aerodrome_import_service.py  aerodrome_service.py  health_service.py  notam_location_sync_runtime.py  notam_location_sync_service.py
app/services/enrichment/: __init__.py  ad2_contracts.py  aerodrome_enricher.py  aip_section_schemas.py  llm_providers.py
app/services/scraper/: aip_extraction.py  aip_metadata.py  aip_parser.py  aip_pipeline.py  aip_raw_canonicalizer.py  aip_scraper.py  aip_segmenter.py  aip_source_model.py  notam_scraper.py  pre_llm_pipeline.py
app/tools/: aip_enrich_tool.py  aip_parse_tool.py  aip_scrape_tool.py  notam_scrape_tool.py
docs/superpowers/specs/: 2026-05-04-notam-agent-langgraph-orchestrator-design.md
migrations/: env.py
migrations/versions/: 4235831c9a1a_initial_aip_schema.py
scripts/: enrich_aerodrome.py  export_golden_raw_from_db.py  import_aerodrome_from_aip.py  inspect_aerodrome_data.py  run_aip_e2e.py  run_notam_e2e.py  seed_aerodromes.py  sync_notam_locations.py  test_ad20_parser.py  test_docling_extraction.py  test_pymupdf_extraction.py
tests/: conftest.py
tests/api/: test_aerodrome_router.py  test_health_router.py
tests/integration/: test_aerodrome_import_service.py  test_database_connection.py  test_redis_connection.py
tests/unit/: test_ad2_contracts.py  test_aerodrome_document.py  test_aerodrome_enricher.py  test_aerodrome_repo.py  test_aip_enrichment_golden.py  test_aip_parser.py  test_aip_pipeline.py  test_aip_raw_canonicalizer.py  test_aip_scraper.py  test_aip_section_schema_alignment.py  test_aip_source_model.py  test_enrichment_runner.py  test_golden_contracts.py  test_golden_evaluator.py  test_golden_fixtures_loader.py  test_golden_reporting.py  test_health_service.py
tmp/: docling_doc_q03.txt  docling_no_ocr.txt  samr_doc_ocr_fullpages.txt
(+107 files in other folders)
