[project]
name = "jetpass-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.29.0",
    "beautifulsoup4>=4.12.0",
    "celery>=5.6.3",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "langchain-core>=1.3.0",
    "langgraph>=1.1.9",
    "ollama>=0.6.1",
    "openai>=1.65.2",
    "playwright>=1.58.0",
    "pymupdf>=1.27.2",
    "pymongo>=4.12.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "uvicorn[standard]>=0.45.0",
    "google-auth>=2.0.0",
    "apscheduler<4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mongomock-motor>=0.0.34",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]

[tool.fastapi]
entrypoint = "app.main:app"
